# cognicoach

./: .gitignore  README.md  app.py  chat.html  flask_server.py  ideation_prompt.txt  main.py  pyproject.toml  style.css
GPT-3.5 BOT CODE/: _main.py  license.txt  old_requirements.txt
chat/: app.py
chat/models/: chat.py
chat/services/: chat_services.py
static/: app.js  chat_styles.css
templates/: chat.html  index.html
