[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
faiss-cpu = "^1.7.3"
openai = "^0.27.4"
pydantic = "^1.10.7"
termcolor = "^2.3.0"
Flask-SQLAlchemy = "^3.0.3"
Flask-HTTPAuth = "^4.7.0"
Flask-Migrate = "^4.0.4"
Flask-RESTful = "^0.3.9"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"